--- a/package.json
+++ b/package.json
@@ -10,24 +10,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.8.3",
     "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
+    "@types/three": "^0.103.2",
     "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^5.1.1",
     "core-js": "^3.6.4",
     "css-loader": "^3.4.2",
+    "html-webpack-plugin": "^3.2.0",
     "hybrids": "^4.1.0",
+    "regenerator-runtime": "^0.13.3",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
-    "typescript": "^3.7.4",
     "three": "^0.112.1",
-    "@types/three": "^0.103.2",
+    "typescript": "^3.7.4",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1",
-    "html-webpack-plugin": "^3.2.0",
-    "copy-webpack-plugin": "^5.1.1"
+    "webpack-dev-server": "^3.10.1"
   },
   "babel": {
     "presets": [
