--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "webpack-dev-server --env dev --config=\"build/webpack.config.js\"",
-		"build": "webpack --env prod --config=\"build/webpack.config.js\""
+		"build": "webpack --env prod --config=\"build/webpack.config.js\"",
+		"test": "jest",
+		"test:watch": "jest --watch"
 	},
 	"author": "",
 	"license": "ISC",
@@ -14,13 +16,17 @@
 		"@babel/core": "^7.8.3",
 		"@babel/preset-env": "^7.8.3",
 		"@babel/preset-typescript": "^7.8.3",
+		"@jest-runner/electron": "^2.0.3",
 		"@types/three": "^0.103.2",
+		"babel-jest": "^25.1.0",
 		"babel-loader": "^8.0.6",
 		"copy-webpack-plugin": "^5.1.1",
 		"core-js": "^3.6.4",
 		"css-loader": "^3.4.2",
+		"electron": "^7.1.11",
 		"html-webpack-plugin": "^3.2.0",
-		"hybrids": "^4.1.1",
+		"hybrids": "^4.1.2",
+		"jest": "^25.1.0",
 		"regenerator-runtime": "^0.13.3",
 		"stylus": "^0.54.7",
 		"stylus-loader": "^3.0.2",
@@ -42,6 +48,25 @@
 			],
 			"@babel/preset-typescript"
 		]
+	},
+	"jest": {
+		"transform": {
+			"^.*\\.(j|t)sx?$": "babel-jest"
+		},
+		"moduleFileExtensions": [
+			"ts",
+			"js",
+			"json",
+			"styl"
+		],
+		"moduleNameMapper": {
+			"src/(.*)$": "<rootDir>/src/$1"
+		},
+		"transformIgnorePatterns": [
+			"node_modules"
+		],
+		"runner": "@jest-runner/electron",
+		"testEnvironment": "@jest-runner/electron/environment"
 	},
 	"browserslist": [
 		"last 2 versions",
