--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-	"name": "three-hybrids",
+	"name": "gl-hybrids",
 	"version": "0.1.0",
+	"repository": "https://github.com/auzmartist/gl-hybrids",
 	"description": "WebGL powered web components with hybrids JS for composable 3D scenes.",
 	"main": "index.js",
 	"scripts": {
@@ -25,7 +26,7 @@
 		"css-loader": "^3.4.2",
 		"electron": "^7.1.11",
 		"html-webpack-plugin": "^3.2.0",
-		"hybrids": "^4.1.2",
+		"hybrids": "^4.1.3",
 		"jest": "^25.1.0",
 		"jest-environment-happy-dom": "0.0.41",
 		"regenerator-runtime": "^0.13.3",
