--- a/package.json
+++ b/package.json
@@ -25,16 +25,20 @@
 		"core-js": "^3.6.4",
 		"css-loader": "^3.4.2",
 		"electron": "^7.1.11",
+		"font-awesome": "^4.7.0",
 		"html-webpack-plugin": "^3.2.0",
 		"hybrids": "^4.1.3",
 		"jest": "^25.1.0",
 		"jest-environment-happy-dom": "0.0.41",
 		"regenerator-runtime": "^0.13.3",
+		"style-loader": "^1.1.3",
 		"stylus": "^0.54.7",
 		"stylus-loader": "^3.0.2",
 		"three": "^0.113.2",
 		"ts-ebml": "^2.0.2",
 		"typescript": "^3.7.4",
+		"url-loader": "^3.0.0",
+		"file-loader": "^5.0.2",
 		"webpack": "^4.41.5",
 		"webpack-cli": "^3.3.10",
 		"webpack-dev-server": "^3.10.1"
@@ -47,7 +51,8 @@
 			"ts",
 			"js",
 			"json",
-			"styl"
+			"styl",
+			"css"
 		],
 		"moduleNameMapper": {
 			"src/(.*)$": "<rootDir>/src/$1"
